--- a/front/css/background.css
+++ b/front/css/background.css
@@ -75,18 +75,15 @@ header p {
     border: none;
 }
 
-@media screen and (max-width:312px) {
-    html, body{font-size: 95%;}
+@media screen and (max-width:380px) {
+    html{font-size: 16px;}
 }
-@media screen and (min-width:312px) and (max-width:420px){
-    html, body{font-size: 100%;}
-}
-@media screen and (min-width:420px) and (max-width:512px){
-    html, body{font-size: 100%;}
+@media screen and (min-width:380px) and (max-width:512px){
+    html{font-size: 20px;}
 }
 @media screen and (min-width:512px) and (max-width:768px){
-    html, body{font-size: 120%;}
+    html{font-size: 23px;}
 } 
 @media screen and (min-width:768px){
-    html, body{font-size: 150%;}
+    html{font-size: 25px;}
 } 
